--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,36 @@
     <title>Wilkommen, bienvenue, and welcome to Heroku!</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='styles/main.css')}}">
   </head>
   <body>
-    <div class="container">
+    <nav class="navbar navbar-expand-md">
+      <a class="navbar-brand" href="#">Logo</a>
+      <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="main-navigation">
+        <ul class="navbar-nav">
+	   <li class="nav-item">
+	     <a class="nav-link" href="#">Home</a>
+	   </li>
+	   <li class="nav-item">
+	     <a class="nav-link" href="#">About</a>
+	   </li>
+           <li class="nav-item">
+	     <a class="nav-link" href="#">Contact</a>
+	   </li>
+	</ul>
+      </div>
+    </nav>
+    <header class="page-header header container-fluid">
+	<div class="description">
+	    <h1>Hello! Welcome to my Flask Landing Page!</h1>
+	    <p>This is an example template for a flask app</p>
+	</div>
+    </header>
+    <!--
       <div class="row">
         <div class="col-lg-12 text-left">
           <h2>Hello, World!</h2>
@@ -26,11 +52,13 @@
           </ul>
         </div>
       </div>
-    </div>
+      -->
+      <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@karolsmoczynski?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Karol Smoczynski"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Karol Smoczynski</span></a>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static',filename='javascript/main.js')}}"></script>
   </body>
 </html>
