--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -4,14 +4,32 @@ body {
 }
 
 .header {
-  background-image: url('../images/karol.jpg');
+/*---  background-image: url('../images/karol.jpg'); ---*/
   background-size: cover;
   background-position: center;
   position: relative;
 }
+/*--- Graph CSS  ---*/
+
+.graph{
+  width: 100%;
+  color: #555;
+  background-color: #f5f9ff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
 
 /*--- Landing Page CSS ---*/
- *
+ 
+.overlay {
+  position: absolute;
+  min-height: 100%;
+  min-width: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.2);
+}
+
 .description {
   left: 50%;
   position: absolute;
