--- a/templates/graph.html
+++ b/templates/graph.html
@@ -12,8 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
-    <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-2.0.1.min.css">
-    <link rel="stylesheet" href="http://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.1.min.css">
+    <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-2.0.1.min.css">
+    <link rel="stylesheet" href="https://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.1.min.css">
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/main.css')}}">
   </head>
   <body>
@@ -75,8 +75,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{{ url_for('static',filename='javascript/main.js')}}"></script>
-    <script src="http://cdn.pydata.org/bokeh/release/bokeh-2.0.1.min.js"></script>
-    <script src="http://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.1.min.js"></script>
+    <script src="https://cdn.pydata.org/bokeh/release/bokeh-2.0.1.min.js"></script>
+    <script src="https://cdn.pydata.org/bokeh/release/bokeh-widgets-2.0.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   </body>
 </html>
